@@ -17,7 +17,8 @@ Changelog
     - [Feature] Added default value analysis to the additional info.
     - [Feature] Added the German translation.
     - [Feature] Added serialized string pretty print.
-    - [Feature]  Added static cache to the filepath scalar analysis.
+    - [Feature] Added static cache to the filepath scalar analysis.
+    - [Feature] Added support for the hidden properties of ext_dom classes.
     - [Change] Removed deprecated code.
     - [Change] Drop PHP 7.0 support
     - [Change] Streamlined the type display of strings
@@ -31,9 +32,9 @@ Changelog
     - [Change] String and array analysis now cache their settings.
     - [Change] The ScalarString class gets instantiated only once per run.
     - [Change] Removed the scope analysis setting.
-    - [Change] Removed the scope analysis setting.
     - [Change] Lots of deprecations.
     - [Change] Removed the XML decoder.
+    - [Change] Drop Unit Tests 6.5 usage.
 
 4.1.4
     - [Feature] Added support for readonly properties
