@@ -22,7 +22,7 @@
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6 || ^7 || ^8 || ^9",
+    "phpunit/phpunit": "^7 || ^8 || ^9",
     "php-mock/php-mock-phpunit": "^2"
   },
   "autoload": {
