@@ -39,6 +39,7 @@ namespace Brainworxx\Krexx\Service\Reflection;
 
 use ReflectionException;
 use ReflectionProperty;
+use Throwable;
 
 /**
  * Added a better possibility to retrieve the object values.
@@ -96,41 +97,76 @@ class ReflectionClass extends \ReflectionClass
     public function retrieveValue(ReflectionProperty $refProperty)
     {
         $propName = $refProperty->getName();
-        $classedPropName = "\0" . $refProperty->getDeclaringClass()->getName() . "\0" . $propName;
-        $result = null;
-        $isUnset = true;
-        if (array_key_exists("\0*\0" . $propName, $this->objectArray) === true) {
-            // Protected or a private
-            $isUnset = false;
-            $result = $this->objectArray["\0*\0" . $propName];
-        } elseif (array_key_exists($classedPropName, $this->objectArray) === true) {
-            // If we are facing multiple declarations, the declaring class name
-            // is set in front of the key.
-            $isUnset = false;
-            $result = $this->objectArray[$classedPropName];
-        } elseif (array_key_exists($propName, $this->objectArray) === true) {
-            // Must be a public. Those are rare.
-            $isUnset = false;
-            $result = $this->objectArray[$propName];
-        } elseif ($refProperty->isStatic() === true) {
+        $lookup = [
+            // Protected properties
+            "\0*\0" . $propName,
+            // Inherited properties
+            "\0" . $refProperty->getDeclaringClass()->getName() . "\0" . $propName,
+            // Public properties.
+            $propName
+        ];
+
+        foreach ($lookup as $arrayKey) {
+            if (array_key_exists($arrayKey, $this->objectArray) === true) {
+                return $this->objectArray[$arrayKey];
+            }
+        }
+
+        if ($refProperty->isStatic() === true) {
             // Static values are not inside the value array.
             $refProperty->setAccessible(true);
-            $isUnset = false;
-            $result = $refProperty->getValue($this->data);
-        } elseif ($refProperty instanceof UndeclaredProperty && is_int($refProperty->propertyName)) {
+            return $refProperty->getValue($this->data);
+        }
+
+        return $this->retrieveEsotericValue($refProperty);
+    }
+
+    /**
+     * Retriever the value by more esoteric means.
+     *
+     * And by this I mean taking care of two PHP bugs:
+     *   - Properties with integer names
+     *   - Hidden public properties of the ext-dom objects
+     *   - Hidden protected properties of the \DateTime object
+     *
+     * @param \ReflectionProperty $refProperty
+     *   The reflection of the property that we are accessing.
+     *
+     * @return mixed
+     */
+    protected function retrieveEsotericValue(ReflectionProperty $refProperty)
+    {
+        $propName = $refProperty->getName();
+        if ($refProperty instanceof UndeclaredProperty && is_numeric($propName)) {
             // We are facing a numeric property name (yes, that is possible).
             // To be honest, this one of the most bizarre things I've encountered so
             // far. Depending on your PHP version, that value may not be accessible
             // via normal means from the array we have got here. And no, we are not
             // accessing the object directly.
-            $isUnset = false;
-            $result = array_values($this->objectArray)[
+            return array_values($this->objectArray)[
                 array_search($propName, array_keys($this->objectArray))
             ];
         }
 
-        $refProperty->isUnset = $isUnset;
-        return $result;
+        if ($refProperty instanceof HiddenProperty) {
+            // We need to access the value directly.
+            // But first we must make sure that the hosting cms does not do
+            // something stupid. Accessing this value directly it probably
+            // a bad idea, but the only way to get the value.
+            set_error_handler(function () {
+                // Do nothing.
+            });
+            try {
+                return $this->data->$propName;
+            } catch (Throwable $exception) {
+                // Do nothing.
+                // Looks like somebody did not like me accessing it directly.
+            }
+            restore_error_handler();
+        }
+
+        $refProperty->isUnset = true;
+        return null;
     }
 
     /**
