@@ -88,7 +88,14 @@ class UndeclaredProperty extends ReflectionProperty
     protected $isPublic = true;
 
     /**
-     * ReflectionUndeclaredProperty constructor.
+     * Is this property protected? Probably not.
+     *
+     * @var bool
+     */
+    protected $isProtected = false;
+
+    /**
+     * Setting the necessary properties constructor.
      *
      * @param \ReflectionClass $ref
      *   The instance of the class with the property.
@@ -153,7 +160,7 @@ class UndeclaredProperty extends ReflectionProperty
      */
     public function isProtected(): bool
     {
-        return false;
+        return $this->isProtected;
     }
 
     /**
