@@ -37,6 +37,7 @@ namespace Brainworxx\Krexx\Tests\Unit\Analyse\Callback\Analyse\Objects;
 
 use Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\PublicProperties;
 use Brainworxx\Krexx\Analyse\Callback\Iterate\ThroughProperties;
+use Brainworxx\Krexx\Service\Reflection\HiddenProperty;
 use Brainworxx\Krexx\Service\Reflection\ReflectionClass;
 use Brainworxx\Krexx\Service\Reflection\UndeclaredProperty;
 use Brainworxx\Krexx\Tests\Fixtures\MethodsFixture;
@@ -192,10 +193,19 @@ class PublicPropertyTest extends AbstractTest
             ->callMe();
 
         $params = CallbackCounter::$staticParameters[0];
+
+        if (version_compare('7.4', phpversion(), '<')) {
+            $propertyType = HiddenProperty::class;
+            $isPublic = false;
+        } else {
+            $propertyType = UndeclaredProperty::class;
+            $isPublic = true;
+        }
+
         $expectations = [
-            (new UndeclaredProperty($fixture['ref'], 'date'))->setIsPublic(false),
-            (new UndeclaredProperty($fixture['ref'], 'timezone'))->setIsPublic(false),
-            (new UndeclaredProperty($fixture['ref'], 'timezone_type'))->setIsPublic(false),
+            (new $propertyType($fixture['ref'], 'date'))->setIsPublic($isPublic),
+            (new $propertyType($fixture['ref'], 'timezone'))->setIsPublic($isPublic),
+            (new $propertyType($fixture['ref'], 'timezone_type'))->setIsPublic($isPublic),
         ];
 
         $this->assertEquals($expectations, $params['data']);
